// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IncidentDetail /> events should render the print view 1`] = `
<Component
  id="100"
  incident={
    Object {
      "status": Object {
        "state": "m",
      },
    }
  }
  incidentNotesList={Array []}
  onPrintView={[Function]}
  priorityList={
    Array [
      Object {
        "key": "normal",
        "value": "Normaal",
      },
      Object {
        "key": "high",
        "value": "Hoog",
      },
    ]
  }
  stadsdeelList={
    Array [
      Object {
        "key": "A",
        "value": "Centrum",
      },
      Object {
        "key": "B",
        "value": "Westpoort",
      },
      Object {
        "key": "E",
        "value": "West",
      },
      Object {
        "key": "M",
        "value": "Oost",
      },
      Object {
        "key": "N",
        "value": "Noord",
      },
      Object {
        "key": "T",
        "value": "Zuidoost",
      },
      Object {
        "key": "K",
        "value": "Zuid",
      },
      Object {
        "key": "F",
        "value": "Nieuw-West",
      },
    ]
  }
/>
`;

exports[`<IncidentDetail /> rendering should render correctly 1`] = `
<div
  className="detail container"
>
  <SplitNotificationBar
    onClose={[Function]}
  />
  <div
    className="row"
  >
    <div
      className="col-12"
    >
      <Link
        className="startagain action"
        replace={false}
        to="undefined/incidents"
      >
        Terug naar overzicht
      </Link>
    </div>
    <div
      className="col-9"
    >
      <h3>
        Melding
        100
      </h3>
    </div>
    <div
      className="col-3 d-flex justify-content-end"
    >
      <Link
        className="align-self-center action-quad"
        replace={false}
        to="undefined/incident/100/split"
      >
        Splitsen
      </Link>
      <button
        className="align-self-center action-quad"
        onClick={[Function]}
      >
        Print view
      </button>
    </div>
    <ul
      className="col-12 col-md-4 detail__map"
    />
    <div
      className="col-12 col-md-8"
    >
      <Component
        incident={
          Object {
            "status": Object {
              "state": "m",
            },
          }
        }
        priorityList={
          Array [
            Object {
              "key": "normal",
              "value": "Normaal",
            },
            Object {
              "key": "high",
              "value": "Hoog",
            },
          ]
        }
        stadsdeelList={
          Array [
            Object {
              "key": "A",
              "value": "Centrum",
            },
            Object {
              "key": "B",
              "value": "Westpoort",
            },
            Object {
              "key": "E",
              "value": "West",
            },
            Object {
              "key": "M",
              "value": "Oost",
            },
            Object {
              "key": "N",
              "value": "Noord",
            },
            Object {
              "key": "T",
              "value": "Zuidoost",
            },
            Object {
              "key": "K",
              "value": "Zuid",
            },
            Object {
              "key": "F",
              "value": "Nieuw-West",
            },
          ]
        }
      />
    </div>
    <div
      className="col-12"
    >
      <Tabs
        onTabChanged={[Function]}
        selectedTab="status"
        tabs={
          Object {
            "category": Object {
              "name": "Subcategorie",
              "value": <Unknown
                id="100"
              />,
            },
            "history": Object {
              "name": "Historie",
              "value": <withReducer(withSaga(Connect(IncidentHistoryContainer)))
                id="100"
              />,
            },
            "image": undefined,
            "location": Object {
              "name": "Locatie",
              "value": <Connect(LocationForm)
                id="100"
              />,
            },
            "notes": Object {
              "count": 0,
              "name": "Notities",
              "value": <Unknown
                id="100"
              />,
            },
            "priority": Object {
              "name": "Urgentie",
              "value": <Unknown
                id="100"
              />,
            },
            "status": Object {
              "name": "Status",
              "value": <Unknown
                id="100"
              />,
            },
          }
        }
      />
    </div>
    <div
      className="col-12"
    >
      <div
        className="detail__tab-container"
      >
        <Component
          id="100"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<IncidentDetail /> rendering should render correctly with image 1`] = `
<div
  className="detail container"
>
  <SplitNotificationBar
    onClose={[Function]}
  />
  <div
    className="row"
  >
    <div
      className="col-12"
    >
      <Link
        className="startagain action"
        replace={false}
        to="undefined/incidents"
      >
        Terug naar overzicht
      </Link>
    </div>
    <div
      className="col-9"
    >
      <h3>
        Melding
        100
      </h3>
    </div>
    <div
      className="col-3 d-flex justify-content-end"
    >
      <Link
        className="align-self-center action-quad"
        replace={false}
        to="undefined/incident/100/split"
      >
        Splitsen
      </Link>
      <button
        className="align-self-center action-quad"
        onClick={[Function]}
      >
        Print view
      </button>
    </div>
    <ul
      className="col-12 col-md-4 detail__map"
    />
    <div
      className="col-12 col-md-8"
    >
      <Component
        incident={
          Object {
            "status": Object {
              "state": "m",
            },
          }
        }
        priorityList={
          Array [
            Object {
              "key": "normal",
              "value": "Normaal",
            },
            Object {
              "key": "high",
              "value": "Hoog",
            },
          ]
        }
        stadsdeelList={
          Array [
            Object {
              "key": "A",
              "value": "Centrum",
            },
            Object {
              "key": "B",
              "value": "Westpoort",
            },
            Object {
              "key": "E",
              "value": "West",
            },
            Object {
              "key": "M",
              "value": "Oost",
            },
            Object {
              "key": "N",
              "value": "Noord",
            },
            Object {
              "key": "T",
              "value": "Zuidoost",
            },
            Object {
              "key": "K",
              "value": "Zuid",
            },
            Object {
              "key": "F",
              "value": "Nieuw-West",
            },
          ]
        }
      />
    </div>
    <div
      className="col-12"
    >
      <Tabs
        onTabChanged={[Function]}
        selectedTab="status"
        tabs={
          Object {
            "category": Object {
              "name": "Subcategorie",
              "value": <Unknown
                id="100"
              />,
            },
            "history": Object {
              "name": "Historie",
              "value": <withReducer(withSaga(Connect(IncidentHistoryContainer)))
                id="100"
              />,
            },
            "image": Object {
              "name": "Foto",
              "value": <div>
                <img
                  alt=""
                  className="detail__image--max-width"
                  src={1}
                />
                <img
                  alt=""
                  className="detail__image--max-width"
                  src={2}
                />
              </div>,
            },
            "location": Object {
              "name": "Locatie",
              "value": <Connect(LocationForm)
                id="100"
              />,
            },
            "notes": Object {
              "count": 0,
              "name": "Notities",
              "value": <Unknown
                id="100"
              />,
            },
            "priority": Object {
              "name": "Urgentie",
              "value": <Unknown
                id="100"
              />,
            },
            "status": Object {
              "name": "Status",
              "value": <Unknown
                id="100"
              />,
            },
          }
        }
      />
    </div>
    <div
      className="col-12"
    >
      <div
        className="detail__tab-container"
      >
        <Component
          id="100"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<IncidentDetail /> rendering should render correctly with location 1`] = `
<div
  className="detail container"
>
  <SplitNotificationBar
    onClose={[Function]}
  />
  <div
    className="row"
  >
    <div
      className="col-12"
    >
      <Link
        className="startagain action"
        replace={false}
        to="undefined/incidents"
      >
        Terug naar overzicht
      </Link>
    </div>
    <div
      className="col-9"
    >
      <h3>
        Melding
        100
      </h3>
    </div>
    <div
      className="col-3 d-flex justify-content-end"
    >
      <Link
        className="align-self-center action-quad"
        replace={false}
        to="undefined/incident/100/split"
      >
        Splitsen
      </Link>
      <button
        className="align-self-center action-quad"
        onClick={[Function]}
      >
        Print view
      </button>
    </div>
    <ul
      className="col-12 col-md-4 detail__map"
    >
      <Component
        label=""
        value={Object {}}
      />
    </ul>
    <div
      className="col-12 col-md-8"
    >
      <Component
        incident={
          Object {
            "location": Object {},
            "status": Object {
              "state": "m",
            },
          }
        }
        priorityList={
          Array [
            Object {
              "key": "normal",
              "value": "Normaal",
            },
            Object {
              "key": "high",
              "value": "Hoog",
            },
          ]
        }
        stadsdeelList={
          Array [
            Object {
              "key": "A",
              "value": "Centrum",
            },
            Object {
              "key": "B",
              "value": "Westpoort",
            },
            Object {
              "key": "E",
              "value": "West",
            },
            Object {
              "key": "M",
              "value": "Oost",
            },
            Object {
              "key": "N",
              "value": "Noord",
            },
            Object {
              "key": "T",
              "value": "Zuidoost",
            },
            Object {
              "key": "K",
              "value": "Zuid",
            },
            Object {
              "key": "F",
              "value": "Nieuw-West",
            },
          ]
        }
      />
    </div>
    <div
      className="col-12"
    >
      <Tabs
        onTabChanged={[Function]}
        selectedTab="status"
        tabs={
          Object {
            "category": Object {
              "name": "Subcategorie",
              "value": <Unknown
                id="100"
              />,
            },
            "history": Object {
              "name": "Historie",
              "value": <withReducer(withSaga(Connect(IncidentHistoryContainer)))
                id="100"
              />,
            },
            "image": undefined,
            "location": Object {
              "name": "Locatie",
              "value": <Connect(LocationForm)
                id="100"
              />,
            },
            "notes": Object {
              "count": 0,
              "name": "Notities",
              "value": <Unknown
                id="100"
              />,
            },
            "priority": Object {
              "name": "Urgentie",
              "value": <Unknown
                id="100"
              />,
            },
            "status": Object {
              "name": "Status",
              "value": <Unknown
                id="100"
              />,
            },
          }
        }
      />
    </div>
    <div
      className="col-12"
    >
      <div
        className="detail__tab-container"
      >
        <Component
          id="100"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<IncidentDetail /> rendering should render correctly with parent 1`] = `
<div
  className="detail container"
>
  <SplitNotificationBar
    onClose={[Function]}
  />
  <div
    className="row"
  >
    <div
      className="col-12"
    >
      <Link
        className="startagain action"
        replace={false}
        to="undefined/incidents"
      >
        Terug naar overzicht
      </Link>
    </div>
    <div
      className="col-9"
    >
      <h3>
        Melding
        100
      </h3>
    </div>
    <div
      className="col-3 d-flex justify-content-end"
    >
      <button
        className="align-self-center action-quad"
        onClick={[Function]}
      >
        Print view
      </button>
    </div>
    <ul
      className="col-12 col-md-4 detail__map"
    />
    <div
      className="col-12 col-md-8"
    >
      <Component
        incident={
          Object {
            "parent_id": 42,
            "status": Object {
              "state": "m",
            },
          }
        }
        priorityList={
          Array [
            Object {
              "key": "normal",
              "value": "Normaal",
            },
            Object {
              "key": "high",
              "value": "Hoog",
            },
          ]
        }
        stadsdeelList={
          Array [
            Object {
              "key": "A",
              "value": "Centrum",
            },
            Object {
              "key": "B",
              "value": "Westpoort",
            },
            Object {
              "key": "E",
              "value": "West",
            },
            Object {
              "key": "M",
              "value": "Oost",
            },
            Object {
              "key": "N",
              "value": "Noord",
            },
            Object {
              "key": "T",
              "value": "Zuidoost",
            },
            Object {
              "key": "K",
              "value": "Zuid",
            },
            Object {
              "key": "F",
              "value": "Nieuw-West",
            },
          ]
        }
      />
    </div>
    <div
      className="col-12"
    >
      <Tabs
        onTabChanged={[Function]}
        selectedTab="status"
        tabs={
          Object {
            "category": Object {
              "name": "Subcategorie",
              "value": <Unknown
                id="100"
              />,
            },
            "history": Object {
              "name": "Historie",
              "value": <withReducer(withSaga(Connect(IncidentHistoryContainer)))
                id="100"
              />,
            },
            "image": undefined,
            "location": Object {
              "name": "Locatie",
              "value": <Connect(LocationForm)
                id="100"
              />,
            },
            "notes": Object {
              "count": 0,
              "name": "Notities",
              "value": <Unknown
                id="100"
              />,
            },
            "priority": Object {
              "name": "Urgentie",
              "value": <Unknown
                id="100"
              />,
            },
            "status": Object {
              "name": "Status",
              "value": <Unknown
                id="100"
              />,
            },
          }
        }
      />
    </div>
    <div
      className="col-12"
    >
      <div
        className="detail__tab-container"
      >
        <Component
          id="100"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<IncidentDetail /> rendering should render correctly without incident 1`] = `
<div
  className="detail container"
>
  <SplitNotificationBar
    onClose={[Function]}
  />
  <div
    className="row"
  >
    <div
      className="col-12"
    >
      <Link
        className="startagain action"
        replace={false}
        to="undefined/incidents"
      >
        Terug naar overzicht
      </Link>
    </div>
    <div
      className="col-9"
    >
      <h3>
        Melding
        100
      </h3>
    </div>
    <div
      className="col-3 d-flex justify-content-end"
    >
      <button
        className="align-self-center action-quad"
        onClick={[Function]}
      >
        Print view
      </button>
    </div>
    <ul
      className="col-12 col-md-4 detail__map"
    />
    <div
      className="col-12 col-md-8"
    />
    <div
      className="col-12"
    >
      <Tabs
        onTabChanged={[Function]}
        selectedTab="status"
        tabs={
          Object {
            "category": Object {
              "name": "Subcategorie",
              "value": <Unknown
                id="100"
              />,
            },
            "history": Object {
              "name": "Historie",
              "value": <withReducer(withSaga(Connect(IncidentHistoryContainer)))
                id="100"
              />,
            },
            "image": undefined,
            "location": Object {
              "name": "Locatie",
              "value": <Connect(LocationForm)
                id="100"
              />,
            },
            "notes": Object {
              "count": 0,
              "name": "Notities",
              "value": <Unknown
                id="100"
              />,
            },
            "priority": Object {
              "name": "Urgentie",
              "value": <Unknown
                id="100"
              />,
            },
            "status": Object {
              "name": "Status",
              "value": <Unknown
                id="100"
              />,
            },
          }
        }
      />
    </div>
    <div
      className="col-12"
    >
      <div
        className="detail__tab-container"
      >
        <Component
          id="100"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<IncidentDetail /> rendering should render loading indicator correctly 1`] = `
<div
  className="detail container"
>
  <SplitNotificationBar
    onClose={[Function]}
  />
  <Component />
</div>
`;
